Small IE fix to PhotoTile alignment
svn commit r18820

--- a/www/styles/pinhole-photo-tile.css
+++ b/www/styles/pinhole-photo-tile.css
@@ -26,7 +26,11 @@
 .pinhole-tile-view .swat-tile span {
 	display: block;
 	height: 2em;
-	padding: 0.3em 0;
+	padding: 0.2em 0;
+}
+
+* html .pinhole-tile-view .swat-tile span {
+	height: 2.4em;
 }
 
 .pinhole-tile-view .swat-tile a span {
